Slider spacing fixes (#1037)

--- a/assets/base.css
+++ b/assets/base.css
@@ -154,6 +154,40 @@
   --color-icon: rgb(var(--color-base-outline-button-labels));
 }
 
+.product-grid,
+.collection-list,
+.card {
+  --border-radius: var(--card-corner-radius);
+  --border-width: var(--card-border-width);
+  --border-opacity: var(--card-border-opacity);
+  --shadow-horizontal-offset: var(--card-shadow-horizontal-offset);
+  --shadow-vertical-offset: var(--card-shadow-vertical-offset);
+  --shadow-blur-radius: var(--card-shadow-blur-radius);
+  --shadow-opacity: var(--card-shadow-opacity);
+}
+
+.multicolumn-list,
+.multicolumn-card {
+  --border-radius: var(--text-boxes-radius);
+  --border-width: var(--text-boxes-border-width);
+  --border-opacity: var(--text-boxes-border-opacity);
+  --shadow-horizontal-offset: var(--text-boxes-shadow-horizontal-offset);
+  --shadow-vertical-offset: var(--text-boxes-shadow-vertical-offset);
+  --shadow-blur-radius: var(--text-boxes-shadow-blur-radius);
+  --shadow-opacity: var(--text-boxes-shadow-opacity);
+}
+
+.product__media-list,
+.product__media-item {
+  --border-radius: var(--media-radius);
+  --border-width: var(--media-border-width);
+  --border-opacity: var(--media-border-opacity);
+  --shadow-horizontal-offset: var(--media-shadow-horizontal-offset);
+  --shadow-vertical-offset: var(--media-shadow-vertical-offset);
+  --shadow-blur-radius: var(--media-shadow-blur-radius);
+  --shadow-opacity: var(--media-shadow-opacity);
+}
+
 /* base */
 
 .no-js:not(html) {
@@ -1065,7 +1099,7 @@ summary::-webkit-details-marker {
   }
 
   .grid--peek .grid__item {
-    padding-left: 0.5rem;
+    padding-left: var(--grid-mobile-horizontal-spacing);
   }
 
   .grid--peek .grid__item:first-of-type {
